--- a/index.html
+++ b/index.html
@@ -1,1 +1,100 @@
-Placeholder content for index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SSC Electrical</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #000;
+      color: #fff;
+    }
+    header {
+      background-color: #ff6600;
+      padding: 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+    }
+    nav {
+      background-color: #111;
+      text-align: center;
+      padding: 10px 0;
+    }
+    nav a {
+      color: #ff6600;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    section {
+      padding: 40px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+    .cta-button {
+      background-color: #ff6600;
+      color: #000;
+      padding: 10px 20px;
+      text-decoration: none;
+      font-weight: bold;
+      display: inline-block;
+      margin-top: 20px;
+    }
+    footer {
+      background-color: #111;
+      color: #888;
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>SSC Electrical</h1>
+    <p>Licensed Electrical Contractor</p>
+  </header>
+
+  <nav>
+    <a href="#about">About</a>
+    <a href="#services">Services</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="about">
+    <h2>About Us</h2>
+    <p>
+      With years of experience, SSC Electrical provides high-quality electrical services for homes and businesses. Fully licensed and insured, we guarantee reliable and safe work every time.
+    </p>
+    <p><strong>ABN:</strong> 89396232051<br>
+    <strong>Contractor Licence No.:</strong> 89941<br>
+    <strong>Electrical Licence No.:</strong> 147194</p>
+  </section>
+
+  <section id="services">
+    <h2>Our Services</h2>
+    <ul>
+      <li>Residential and commercial wiring</li>
+      <li>Switchboard upgrades</li>
+      <li>LED lighting installation</li>
+      <li>Safety inspections</li>
+      <li>Emergency repairs</li>
+    </ul>
+  </section>
+
+  <section id="contact">
+    <h2>Get in Touch</h2>
+    <p>Email: <a href="mailto:callan@sscelectrical.com.au" style="color: #ff6600;">callan@sscelectrical.com.au</a></p>
+    <p>Phone: <a href="tel:+1234567890" style="color: #ff6600;">+1 234 567 890</a></p>
+    <a class="cta-button" href="mailto:callan@sscelectrical.com.au">Contact Us</a>
+  </section>
+
+  <footer>
+    &copy; 2025 SSC Electrical. All rights reserved.
+  </footer>
+</body>
+</html>
