--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,6 +17,7 @@
     .gallery img { width: 100%; max-width: 300px; margin: 10px; border: 2px solid #ff6600; }
     .reviews { background-color: #111; padding: 20px; border-radius: 8px; }
     .review { margin-bottom: 20px; border-bottom: 1px solid #333; padding-bottom: 10px; }
+    .social-links a { color: #ff6600; margin: 0 10px; text-decoration: none; font-weight: bold; }
     @media (max-width: 600px) { nav a { display: block; margin: 10px 0; } }
   </style>
 </head>
@@ -77,10 +79,19 @@
     <h2>Get in Touch</h2>
     <p>Email: <a href="mailto:callan@sscelectrical.com.au" style="color: #ff6600;">callan@sscelectrical.com.au</a></p>
     <p>Phone: <a href="tel:0411272520" style="color: #ff6600;">0411 272 520</a></p>
+    <div class="social-links">
+      <p>Follow us:</p>
+      <a href="https://www.facebook.com/people/SSC-Electrical/61562596560735/" target="_blank">Facebook</a>
+      <a href="https://www.instagram.com/sscelectrical/" target="_blank">Instagram</a>
+    </div>
     <a class="cta-button" href="mailto:callan@sscelectrical.com.au">Contact Us</a>
   </section>
   <footer>
-    &copy; 2025 SSC Electrical. All rights reserved.
+    &copy; 2025 SSC Electrical. All rights reserved.<br>
+    <div class="social-links">
+      <a href="https://www.facebook.com/people/SSC-Electrical/61562596560735/" target="_blank">Facebook</a> |
+      <a href="https://www.instagram.com/sscelectrical/" target="_blank">Instagram</a>
+    </div>
   </footer>
 </body>
 </html>
