--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       <li>🚨 Emergency callouts – quick response when you need it most</li>
     </ul>
   </section>
+   </section>
   <section id="gallery">
     <h2>Our Work</h2>
-     <div class="gallery">
       <img src="img1.jpg" alt="Work 1">
       <img src="img2.jpg" alt="Work 2">
       <img src="img3.jpg" alt="Work 3">
