--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SSC Electrical</title>
-  <style>
+<title>SSC Electrical | Cooroy Electrician | Switchboard Upgrades &amp; Emergency Callouts</title>
+<meta content="SSC Electrical — Your trusted local electrician in Cooroy, servicing Gympie, Noosa, Nambour, and Coolum. Licensed, experienced, and available 24/7 for emergencies." name="description"/>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>SSC Electrical</title>
+<style>
     body { margin: 0; font-family: Arial, sans-serif; background-color: #000; color: #fff; }
     header { background-color: #ff6600; padding: 20px; text-align: center; }
     header img.logo { max-width: 200px; display: block; margin: 0 auto 10px; }
@@ -22,76 +25,100 @@
   </style>
 </head>
 <body>
-  <header>
-    <img src="logo.png" alt="SSC Electrical Logo" class="logo">
-    <h1>SSC Electrical</h1>
-    <p>Licensed Electrical Contractor</p>
-  </header>
-  <nav>
-    <a href="#about">About</a>
-    <a href="#services">What I Do</a>
-    <a href="#gallery">Gallery</a>
-    <a href="#reviews">Reviews</a>
-    <a href="#contact">Contact</a>
-  </nav>
-  <section id="about">
-    <h2>About Me</h2>
-    <p>G’day, I’m Callan — the bloke behind SSC Electrical. I’ve been in the electrical industry for over 20 years, and in that time I’ve seen it all — from dodgy switchboards to tight ceiling crawls to full-scale solar setups.</p>
-    <p>I started SSC Electrical with a simple goal: deliver honest, high-quality electrical work that customers can count on. I believe in doing the job properly the first time, treating every site like it’s my own home, and making sure you’re never left in the dark.</p>
-    <p>Fully licensed and insured, I back my work with experience, attention to detail, and pride in getting it right — safely and cleanly.</p>
-    <p><strong>ABN:</strong> 89396232051<br><strong>Contractor Licence No.:</strong> 89941<br><strong>Electrical Licence No.:</strong> 147194</p>
-  </section>
-  <section id="services">
-    <h2>What I Do</h2>
-    <ul>
-      <li>🏠 Residential installs, upgrades & repairs</li>
-      <li>🔌 Switchboard upgrades & safety checks</li>
-      <li>💡 LED lighting & energy-efficient fitouts</li>
-      <li>🔋 Grid-connected solar systems & ESS battery installs</li>
-      <li>🔥 Smoke alarms & PowerPoints</li>
-      <li>❄️ Split system air conditioning (ARCtick licensed)</li>
-      <li>🚨 Emergency callouts – quick response when you need it most</li>
-    </ul>
-  </section>
-   </section>
-  <section id="gallery">
-    <h2>Our Work</h2>
-      <img src="img1.jpg" alt="Work 1">
-      <img src="img2.jpg" alt="Work 2">
-      <img src="img3.jpg" alt="Work 3">
-      <img src="img4.jpg" alt="Work 4">
-      <img src="img5.jpg" alt="Work 5">
-      <img src="img6.jpg" alt="Work 6">
-    </div>
-  </section>
-  <section id="reviews">
-    <h2>What Our Customers Say</h2>
-    <div class="reviews">
-      <div class="review"><strong>John N Mason</strong> ★★★★★<br> Very professional, reliable and thorough. Hard working too. Replaced our underground power. Highly recommend.</div>
-      <div class="review"><strong>Eleanor Lim</strong> ★★★★★<br> Fabulous...Callan diagnosed any electrical issues and tended to our requirements in detail...his work is very tidy and efficient. We highly recommend Callan.</div>
-      <div class="review"><strong>Susan Caruana</strong> ★★★★★<br> Callan came and did an awesome job, got me out of a fix. Very reasonable rates too. Thanks Callan!</div>
-      <div class="review"><strong>Amelia Jane</strong> ★★★★★<br> Prompt, great service and prices.</div>
-      <div class="review"><strong>Acura Multimedia</strong> ★★★★★<br> Very professional – diagnosed and fixed the issue quickly. Highly recommend!</div>
-      <div class="review"><strong>Todd Otton</strong> ★★★★★<br> Great job Callan, two poles, two meter boards in, ready to go – Energex ready 🤘</div>
-    </div>
-  </section>
-  <section id="contact">
-    <h2>Get in Touch</h2>
-    <p>Email: <a href="mailto:callan@sscelectrical.com.au" style="color: #ff6600;">callan@sscelectrical.com.au</a></p>
-    <p>Phone: <a href="tel:0411272520" style="color: #ff6600;">0411 272 520</a></p>
-    <div class="social-links">
-      <p>Follow us:</p>
-      <a href="https://www.facebook.com/people/SSC-Electrical/61562596560735/" target="_blank">Facebook</a>
+<div style="background-color: red; color: white; text-align: center; padding: 10px; font-weight: bold; position: sticky; top: 0; z-index: 1000;">
+    🚨 Need urgent help? Call <a href="tel:0411272520" style="color: white; text-decoration: underline;">0411 272 520</a> — 24/7 emergency service available
+</div>
+<header>
+<img alt="SSC Electrical Logo" class="logo" src="logo.png"/>
+<h1>SSC Electrical</h1>
+<p>Licensed Electrical Contractor</p>
+</header>
+<nav>
+<a href="#about">About</a>
+<a href="#services">What I Do</a>
+<a href="#gallery">Gallery</a>
+<a href="#reviews">Reviews</a>
+<a href="#contact">Contact</a>
+</nav>
+<section id="about">
+<h2>About Me</h2>
+<p>G’day, I’m Callan — the bloke behind SSC Electrical. I’ve been in the electrical industry for over 20 years, and in that time I’ve seen it all — from dodgy switchboards to tight ceiling crawls to full-scale solar setups.</p>
+<p>I started SSC Electrical with a simple goal: deliver honest, high-quality electrical work that customers can count on. I believe in doing the job properly the first time, treating every site like it’s my own home, and making sure you’re never left in the dark.</p>
+<p>Fully licensed and insured, I back my work with experience, attention to detail, and pride in getting it right — safely and cleanly.</p>
+<p><strong>ABN:</strong> 89396232051<br/><strong>Contractor Licence No.:</strong> 89941<br/><strong>Electrical Licence No.:</strong> 147194</p>
+</section>
+<section id="services">
+<h2>What I Do</h2>
+<ul>
+<li>🏠 Residential installs, upgrades &amp; repairs</li>
+<li>🔌 Switchboard upgrades &amp; safety checks</li>
+<li>💡 LED lighting &amp; energy-efficient fitouts</li>
+<li>🔋 Grid-connected solar systems &amp; ESS battery installs</li>
+<li>🔥 Smoke alarms &amp; PowerPoints</li>
+<li>❄️ Split system air conditioning (ARCtick licensed)</li>
+<li>🚨 Emergency callouts – quick response when you need it most</li>
+</ul>
+</section>
+<section id="gallery">
+<h2>Our Work</h2>
+<div class="gallery">
+<img alt="Work 1" src="img1.jpg"/>
+<img alt="Work 2" src="img2.jpg"/>
+<img alt="Work 3" src="img3.jpg"/>
+<img alt="Work 4" src="img4.jpg"/>
+<img alt="Work 5" src="img5.jpg"/>
+<img alt="Work 6" src="img6.jpg"/>
+</div>
+</section>
+<section id="reviews">
+<h2>What Our Customers Say</h2>
+<div class="reviews">
+<div class="review"><strong>John N Mason</strong> ★★★★★<br/> Very professional, reliable and thorough. Hard working too. Replaced our underground power. Highly recommend.</div>
+<div class="review"><strong>Eleanor Lim</strong> ★★★★★<br/> Fabulous...Callan diagnosed any electrical issues and tended to our requirements in detail...his work is very tidy and efficient. We highly recommend Callan.</div>
+<div class="review"><strong>Susan Caruana</strong> ★★★★★<br/> Callan came and did an awesome job, got me out of a fix. Very reasonable rates too. Thanks Callan!</div>
+<div class="review"><strong>Amelia Jane</strong> ★★★★★<br/> Prompt, great service and prices.</div>
+<div class="review"><strong>Acura Multimedia</strong> ★★★★★<br/> Very professional – diagnosed and fixed the issue quickly. Highly recommend!</div>
+<div class="review"><strong>Todd Otton</strong> ★★★★★<br/> Great job Callan, two poles, two meter boards in, ready to go – Energex ready 🤘</div>
+</div>
+</section>
+<section id="contact">
+<h2>Get in Touch</h2>
+<p>Email: <a href="mailto:callan@sscelectrical.com.au" style="color: #ff6600;">callan@sscelectrical.com.au</a></p>
+<p>Phone: <a href="tel:0411272520" style="color: #ff6600;">0411 272 520</a></p>
+<div class="social-links">
+<p>Follow us:</p>
+<a href="https://www.facebook.com/people/SSC-Electrical/61562596560735/" target="_blank">Facebook</a>
+<a href="https://www.instagram.com/sscelectrical/" target="_blank">Instagram</a>
+</div>
+<a class="cta-button" href="mailto:callan@sscelectrical.com.au">Contact Us</a>
+</section>
+<footer>
+    © 2025 SSC Electrical. All rights reserved.<br/>
+<div class="social-links">
+<a href="https://www.facebook.com/people/SSC-Electrical/61562596560735/" target="_blank">Facebook</a> |
       <a href="https://www.instagram.com/sscelectrical/" target="_blank">Instagram</a>
-    </div>
-    <a class="cta-button" href="mailto:callan@sscelectrical.com.au">Contact Us</a>
-  </section>
-  <footer>
-    &copy; 2025 SSC Electrical. All rights reserved.<br>
-    <div class="social-links">
-      <a href="https://www.facebook.com/people/SSC-Electrical/61562596560735/" target="_blank">Facebook</a> |
-      <a href="https://www.instagram.com/sscelectrical/" target="_blank">Instagram</a>
-    </div>
-  </footer>
+</div>
+</footer>
+
+<section id="services" style="padding: 2em;">
+<h2>⚡ What I Do</h2>
+<ul style="list-style: none; padding-left: 0;">
+<li>✔️ <strong>Residential Electrical Installations</strong><br/>New homes, renovations, and rewires — done safely and to standard.</li><br/>
+<li>✔️ <strong>Switchboard Upgrades</strong><br/>Outdated or unsafe switchboard? Get it upgraded to meet modern safety and compliance.</li><br/>
+<li>✔️ <strong>Safety Checks &amp; Fault Finding</strong><br/>Electrical inspections and diagnostics to keep your home safe and running smoothly.</li><br/>
+<li>✔️ <strong>LED Lighting &amp; Energy Efficient Fit-Outs</strong><br/>Bright, clean, cost-saving lighting solutions for inside and out.</li><br/>
+<li>✔️ <strong>Grid-Connect Solar &amp; Battery (ESS)</strong><br/>Certified installs for solar systems and home battery storage.</li><br/>
+<li>✔️ <strong>Smoke Alarm Installations</strong><br/>QLD-compliant smoke alarm upgrades and testing.</li><br/>
+<li>✔️ <strong>PowerPoint &amp; Lighting Installation</strong><br/>Extra sockets, feature lighting, outdoor power — you name it.</li><br/>
+<li>✔️ <strong>Emergency Call-Outs (24/7)</strong><br/>Got a power issue or urgent fault? Call me anytime.</li><br/>
+<li>✔️ <strong>Split System Air Conditioning</strong><br/>Licensed install of energy-efficient split systems — cool in summer, warm in winter.</li>
+</ul>
+</section>
+<section id="service-area" style="padding: 2em;">
+<h2>Service Area</h2>
+<p>We proudly service Cooroy, Gympie, Noosa, Nambour, Coolum, Pomona, Tewantin, and Peregian Beach.</p>
+<iframe allowfullscreen="" height="300" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d35344.19901772914!2d152.91169497910157!3d-26.42060073109321!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b937e3962e3a52b%3A0x502a35af3de9480!2sCooroy%20QLD%204561!5e0!3m2!1sen!2sau!4v1700000000000!5m2!1sen!2sau" style="border:0;" width="100%">
+</iframe>
+</section>
 </body>
 </html>
