--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <section id="service-area" style="padding: 2em;">
 <h2>Service Area</h2>
 <p>We proudly service Cooroy, Gympie, Noosa, Nambour, Coolum, Pomona, Tewantin, and Peregian Beach.</p>
-<iframe allowfullscreen="" height="300" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com.au/maps/place/Cooroy+QLD+4563/@-26.4246494,152.8611281,18188m/data=!3m2!1e3!4b1!4m6!3m5!1s0x6b93632d548ff051:0x502a35af3dea970!8m2!3d-26.4174227!4d152.9104417!16zL20vMDV5N2w4?entry=ttu&g_ep=EgoyMDI1MTAwMS4wIKXMDSoASAFQAw%3D%3D" style="border:0;" width="100%">
+<iframe allowfullscreen="" height="300" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14140.295865519014!2d152.911695!3d-26.420601!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b937e3962e3a52b%3A0x502a35af3de9480!2sCooroy%20QLD%204561!5e0!3m2!1sen!2sau!4v1700000000000!5m2!1sen!2sau" style="border:0;" width="100%">
 </iframe>
 </section>
 <section id="contact">
