--- a/index.html
+++ b/index.html
@@ -64,18 +64,26 @@
 <section id="gallery">
 <h2>Our Work</h2>
 <div class="gallery">
-<img alt="Work 1" src="img1.jpg"/>
-<img alt="Work 2" src="img2.jpg"/>
-<img alt="Work 3" src="img4.jpg"/>
-<img alt="Work 4" src="img3.jpg"/>
-<img alt="Work 5" src="img5.jpg"/>
-<img alt="Work 6" src="img6.jpg"/>
-<img alt="Work 7" src="img10.jpg"/>
-<img alt="Work 8" src="img8.jpg"/>
-<img alt="Work 9" src="img9.jpg"/>
-<img alt="Work 10" src="img7.jpg"/>
-<img alt="Work 11" src="img12.jpg"/>
-<img alt="Work 12" src="img11.jpg"/>
+<div class="gallery">
+  <img src="landscape1.jpg" class="landscape" />
+  <img src="landscape2.jpg" class="landscape" />
+  <img src="portrait1.jpg" class="portrait" />
+  <img src="portrait2.jpg" class="portrait" />
+  <img src="portrait3.jpg" class="portrait" />
+  <!-- ... -->
+</div>
+<img alt="Work 1" src="img1.jpg" class="landscape"/>
+<img alt="Work 2" src="img2.jpg" class="landscape"/>
+<img alt="Work 3" src="img3.jpg" class="portrait"/>
+<img alt="Work 4" src="img5.jpg" class="portrait"/>
+<img alt="Work 5" src="img6.jpg" class="portrait"/>
+<img alt="Work 6" src="img10.jpg" class="portrait"/>
+<img alt="Work 7" src="img8.jpg" class="portrait"/>
+<img alt="Work 8" src="img9.jpg" class="portrait"/>
+<img alt="Work 9" src="img7.jpg" class="landscape"/>
+<img alt="Work 10" src="img11.jpg" class="landscape"/>
+<img alt="Work 11" src="img4.jpg" class="landscape"/>
+<img alt="Work 12" src="img13.jpg" class="landscape"/>
 </div>
 </section>
 <section id="reviews">
