--- a/index.html
+++ b/index.html
@@ -69,16 +69,21 @@
   <meta charset="UTF-8">
   <title>Separated Landscape and Portrait Grids</title>
   <style>
-    .gallery-section {
-      max-width: 10px;
-      margin: 0 auto 10px auto;
+    .landscape-gallery {
+      max-width: 1200px;   /* wider for landscape */
+      margin: 0 auto 40px auto;
+      width: 100%;
+    }
+    .portrait-gallery {
+      max-width: 800px;    /* narrower for portrait */
+      margin: 0 auto 40px auto;
       width: 100%;
     }
     .landscape-grid {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: 10px;
-      margin-bottom: 10px;
+      margin-bottom: 16px;
     }
     .portrait-grid {
       display: grid;
@@ -88,14 +93,14 @@
     .img-landscape {
       width: 100%;
       aspect-ratio: 16/9;
-      object-fit: fill;
+      object-fit: cover;
       background: #eee;
       display: block;
     }
     .img-portrait {
       width: 100%;
       aspect-ratio: 4/5;
-      object-fit: fill;
+      object-fit: cover;
       background: #eee;
       display: block;
     }
@@ -105,8 +110,9 @@
   </style>
 </head>
 <body>
-  <div class="gallery-section">
-     <div class="landscape-grid">
+  <div class="landscape-gallery">
+    <h2>Landscape Photos</h2>
+    <div class="landscape-grid">
       <img src="img1.jpg" alt="Landscape 1" class="img-landscape">
       <img src="img2.jpg" alt="Landscape 2" class="img-landscape">
       <img src="img7.jpg" alt="Landscape 3" class="img-landscape">
@@ -115,7 +121,8 @@
       <img src="img11.jpg" alt="Landscape 6" class="img-landscape">
     </div>
   </div>
-  <div class="gallery-section">
+  <div class="portrait-gallery">
+    <h2>Portrait Photos</h2>
     <div class="portrait-grid">
       <img src="img5.jpg" alt="Portrait 1" class="img-portrait">
       <img src="img6.jpg" alt="Portrait 2" class="img-portrait">
