--- a/index.html
+++ b/index.html
@@ -67,15 +67,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Separated Landscape and Portrait Grids</title>
   <style>
     .landscape-gallery {
-      max-width: 1200px;   /* wider for landscape */
+      max-width: 1000px;   /* wider for landscape */
       margin: 0 auto 40px auto;
       width: 100%;
     }
     .portrait-gallery {
-      max-width: 800px;    /* narrower for portrait */
+      max-width: 1000px;    /* narrower for portrait */
       margin: 0 auto 40px auto;
       width: 100%;
     }
@@ -93,14 +92,14 @@
     .img-landscape {
       width: 100%;
       aspect-ratio: 16/9;
-      object-fit: cover;
+      object-fit: fill;
       background: #eee;
       display: block;
     }
     .img-portrait {
       width: 100%;
       aspect-ratio: 4/5;
-      object-fit: cover;
+      object-fit: fill;
       background: #eee;
       display: block;
     }
@@ -111,8 +110,7 @@
 </head>
 <body>
   <div class="landscape-gallery">
-    <h2>Landscape Photos</h2>
-    <div class="landscape-grid">
+   <div class="landscape-grid">
       <img src="img1.jpg" alt="Landscape 1" class="img-landscape">
       <img src="img2.jpg" alt="Landscape 2" class="img-landscape">
       <img src="img7.jpg" alt="Landscape 3" class="img-landscape">
@@ -120,10 +118,8 @@
       <img src="img4.jpg" alt="Landscape 5" class="img-landscape">
       <img src="img11.jpg" alt="Landscape 6" class="img-landscape">
     </div>
-  </div>
   <div class="portrait-gallery">
-    <h2>Portrait Photos</h2>
-    <div class="portrait-grid">
+     <div class="portrait-grid">
       <img src="img5.jpg" alt="Portrait 1" class="img-portrait">
       <img src="img6.jpg" alt="Portrait 2" class="img-portrait">
       <img src="img8.jpg" alt="Portrait 3" class="img-portrait">
