--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <style>
     .landscape-gallery {
       max-width: 1000px;   /* wider for landscape */
-      margin: 0 auto 65px auto;
+      margin: 40px auto;
       width: 100%;
     }
     .portrait-gallery {
