--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <style>
     .landscape-gallery {
       max-width: 1000px;   /* wider for landscape */
-      margin: 40px auto;
+      margin: o auto 40px auto;
       width: 100%;
     }
     .portrait-gallery {
@@ -91,7 +91,7 @@
     }
     .img-landscape {
       width: 100%;
-      aspect-ratio: 16/9;
+      aspect-ratio: 5/4;
       object-fit: fill;
       background: #eee;
       display: block;
