--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <style>
     .landscape-gallery {
       max-width: 1000px;   /* wider for landscape */
-      margin: o auto 40px auto;
+      margin: 20px auto 40px auto;
       width: 100%;
     }
     .portrait-gallery {
@@ -90,7 +90,7 @@
       gap: 10px;
     }
     .img-landscape {
-      width: 1665%;
+      width: 100%;
       aspect-ratio: 5/4;
       object-fit: fill;
       background: #eee;
