--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: 10px;
-      margin-bottom: 16px;
+      margin-bottom: opx;
     }
     .portrait-grid {
       display: grid;
@@ -91,7 +91,7 @@
     }
     .img-landscape {
       width: 100%;
-      aspect-ratio: 5/4;
+      aspect-ratio: 4/5;
       object-fit: fill;
       background: #eee;
       display: block;
