--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       gap: 10px;
     }
     .img-landscape {
-      width: 100%;
+      width: 200px;
       aspect-ratio: 4/5;
       object-fit: fill;
       background: #eee;
