--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
       gap: 10px;
     }
     .img-landscape {
-      width: 400px;
-      height: 350px;
+      width: 250px;
+      height: 200px;
       object-fit: cover;
       background: #eee;
-      display: block;
+      display: inline-block;
     }
     .img-portrait {
-      width: 100%;
-      aspect-ratio: 4/5;
-      object-fit: fill;
+      width: 200px;
+      height: 250px;
+      object-fit: cover;
       background: #eee;
       display: block;
     }
