--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       height: 200px;
       object-fit: cover;
       background: #eee;
-      display: inline-block;
+      display: grid;
     }
     .img-portrait {
       width: 200px;
