--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     }
     .landscape-grid {
       display: grid;
-      grid-auto-columns: repeat(2, 1fr);
+      grid-auto-columns: repeat(1.5, 1.5fr);
       gap: 10px;
       margin-bottom: opx;
     }
@@ -94,7 +94,7 @@
       height: 200px;
       object-fit: cover;
       background: #eee;
-      display: grid;
+      display: block;
     }
     .img-portrait {
       width: 200px;
